feat: use operation filter
