# Playground.ApiController/WeatherForecast.cs
@@ -10,10 +10,3 @@ public class WeatherForecast
 
     public string? Summary { get; set; }
 }
-
-public class WeatherForecastUpload
-{
-    public IFormFile File { get; set; }
-    public DateTimeOffset SignatureDate { get; set; }
-    public string SignatureHash { get; set; }
-}
